# lirtmats

./: .gitignore  .readthedocs.yaml  MANIFEST.in  README.md  pyproject.toml
docs/: Makefile  conf.py  index.rst  introduction.rst  lirtmats.rst  make.bat
examples/: debug_rt_match.py  lirtmats_cli.bat  lirtmats_cli.sh  lirtmats_example.py  lirtmats_quick_start.html  lirtmats_quick_start.ipynb  lirtmats_quick_start.py  test_main.py
examples/data/: df_pos_2.tsv  df_pos_3.tsv
examples/ref/: .gitignore  rt_lib_202509.tsv
examples/res/: .gitignore
lirtmats/: __init__.py  __main__.py  gui.py  lirtmats.py
lirtmats/lib/: rt_lib_202509.xlsx
lirtmats/qt/: lirtmats_form.py  lirtmats_form.ui  ui_to_py.sh
