
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lirtmats"
version = "1.0.0"
description = "LiRTMaTS - Liverpool retention time matching software"
authors = [
  {name="Wanchang Lin", email="wanchang.lin@liverpool.ac.uk"},
  {name="Warwick Dunn", email="warwick.dunn@liverpool.ac.uk"}
]
maintainers = [
  {name="Wanchang Lin", email="wanchang.lin@liverpool.ac.uk"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["numpy", "scipy", "pandas", "openpyxl", "lamps"] 
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
keywords = ["Metabolomics", "Mass Spectrometry", "Data Analysis"]

[project.scripts]
lirtmats = "lirtmats.__main__:main"

[project.urls]
Homepage = "https://github.com/wanchanglin/lirtmats"
Issues = "https://github.com/wanchanglin/lirtmats/issues"
